<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ic_setting"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:src="@drawable/ic_setting_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:fontFamily="@font/f500"
        android:text="@string/this_app_need"
        android:textColor="@color/n1"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/ic_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_setting"
        app:layout_constraintTop_toTopOf="@id/ic_setting" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/f500"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/access_1"
        android:textColor="@color/n1"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/ic_setting" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/f500"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/access_2"
        android:textColor="@color/n1"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@drawable/bg_n6_12"
        android:backgroundTint="@color/n3"
        android:fontFamily="@font/f700"
        android:foreground="@drawable/fg_ripple_effect_16"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <TextView
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_primary_12"
        android:fontFamily="@font/f700"
        android:foreground="@drawable/fg_ripple_effect_16"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/allow"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>