<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_12sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/f700"
        android:text="@string/completed"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSaving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/f400"
        android:gravity="center"
        android:text="@string/saving"
        android:textColor="@color/n3"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/tvSaving" />

    <TextView
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_primary_stroke_12"
        android:fontFamily="@font/f500"
        android:foreground="@drawable/fg_ripple_effect_8"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/take_another_photo"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_primary_12"
        android:fontFamily="@font/f500"
        android:foreground="@drawable/fg_ripple_effect_8"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/finish"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnTakePhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>