<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_20sdp"
    android:background="@drawable/bg_n6_top_12"
    android:paddingBottom="@dimen/_90sdp"
    app:behavior_peekHeight="@dimen/_120sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_4sdp"
        android:background="@drawable/bg_primary_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnOriginal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@drawable/bg_primary_50"
        android:fontFamily="@font/f500"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/original"
        android:textColor="@color/n1"
        android:foreground="@drawable/fg_ripple_effect_50"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toStartOf="@id/btnSolid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/btnSolid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@drawable/bg_primarylight_50"
        android:foreground="@drawable/fg_ripple_effect_50"
        android:fontFamily="@font/f500"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/solid"
        android:textColor="@color/n4"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toEndOf="@id/btnOriginal"
        app:layout_constraintEnd_toStartOf="@id/btnHollow"
        app:layout_constraintTop_toTopOf="@id/btnOriginal" />

    <TextView
        android:id="@+id/btnHollow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_primarylight_50"
        android:foreground="@drawable/fg_ripple_effect_50"
        android:fontFamily="@font/f500"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/hollow"
        android:textColor="@color/n4"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSolid"
        app:layout_constraintTop_toTopOf="@id/btnOriginal" />

    <TextView
        android:id="@+id/tvEdge"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/f500"
        android:alpha=".3"
        android:text="@string/edge"
        android:textColor="@color/n1"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSolid" />

    <SeekBar
        android:id="@+id/seekbarEdge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:progressDrawable="@drawable/custom_seekbar"
        android:splitTrack="false"
        android:alpha=".3"
        android:max="10"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@id/tvEdge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEdge"
        app:layout_constraintTop_toTopOf="@id/tvEdge" />

    <TextView
        android:id="@+id/tvOpacity"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/f500"
        android:text="@string/opacity"
        android:textColor="@color/n1"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbarEdge" />

    <SeekBar
        android:id="@+id/seekbarOpacity"
        android:layout_width="0dp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:progressDrawable="@drawable/custom_seekbar"
        android:splitTrack="false"
        android:max="10"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="@id/tvOpacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvOpacity"
        app:layout_constraintTop_toTopOf="@id/tvOpacity" />
</androidx.constraintlayout.widget.ConstraintLayout>