<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sketch.RequestPermissionActivity">

    <ImageView
        android:id="@+id/imvIcon"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_camera_per"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/f700"
        android:text="@string/permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@id/imvIcon"
        app:layout_constraintStart_toStartOf="@id/imvIcon"
        app:layout_constraintTop_toBottomOf="@id/imvIcon" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/f500"
        android:gravity="center"
        android:text="@string/permission_content"
        android:textColor="@color/n7"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPermission" />

    <LinearLayout
        android:id="@+id/containerSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_n6_12"
        android:backgroundTint="@color/n8"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/tvContent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/f500"
            android:text="@string/allow_access"
            android:textColor="#2E2E2E"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchPermission"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/textView228"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/containerSwitch"
        app:layout_constraintEnd_toEndOf="@id/containerSwitch"
        app:lottie_autoPlay="true"
        android:layout_marginBottom="@dimen/_minus5sdp"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/click_hand_tab"
        app:lottie_renderMode="hardware" />
    <TextView
        android:foreground="@drawable/fg_ripple_effect_16"
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/f500"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_primary_12"
        android:backgroundTint="@color/n8"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/tvContinue"
        android:textColor="@color/n6"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerSwitch" />
    <com.dream.libads.admob.NativeAdStyle3
        android:id="@+id/nativeAdmob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_primary_stroke_12"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>