<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/n6"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/f700"
        android:text="@string/app_name"
        android:textColor="@color/n1"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnSetting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="8dp"
        android:foreground="@drawable/fg_ripple_effect"
        android:src="@drawable/ic_setting_home"
        app:layout_constraintBottom_toBottomOf="@id/tvAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAppName" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container_ads"
        app:layout_constraintTop_toBottomOf="@id/btnSetting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/containerSketch"
                android:layout_width="0dp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/bg_primary_12"
                android:foreground="@drawable/fg_ripple_effect_16"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                app:layout_constraintEnd_toStartOf="@id/containerTrace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_sketch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/f700"
                    android:text="@string/sketch"
                    android:textColor="@color/n6"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerTrace"
                android:layout_width="0dp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_primary_12"
                android:backgroundTint="#345CB4"
                android:foreground="@drawable/fg_ripple_effect_16"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/containerSketch"
                app:layout_constraintTop_toTopOf="@id/containerSketch">

                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_trace" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/f700"
                    android:text="@string/trace"
                    android:textColor="@color/n6"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerChallenge"
                android:layout_width="0dp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/bg_primary_12"
                android:backgroundTint="#FF7373"
                android:foreground="@drawable/fg_ripple_effect_16"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                app:layout_constraintEnd_toStartOf="@id/containerDraw"
                app:layout_constraintStart_toStartOf="@id/containerSketch"
                app:layout_constraintTop_toBottomOf="@id/containerSketch">

                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_challenge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/f700"
                    android:text="@string/challenge"
                    android:textColor="@color/n6"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerDraw"
                android:layout_width="0dp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_primary_12"
                android:backgroundTint="#42CFB5"
                android:foreground="@drawable/fg_ripple_effect_16"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/containerChallenge"
                app:layout_constraintTop_toBottomOf="@id/containerSketch">

                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_draw" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/f700"
                    android:text="@string/draw"
                    android:textColor="@color/n6"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerHowToUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_primary_light_corner_12_stroke_primary"
                android:foreground="@drawable/fg_ripple_effect_16"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/containerChallenge">

                <ImageView
                    android:layout_width="@dimen/_26sdp"
                    android:layout_height="@dimen/_26sdp"
                    android:src="@drawable/ic_how_to_use" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:fontFamily="@font/f700"
                    android:text="@string/how_to_use"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerLearn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_primarylight_12"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/containerHowToUse">

                <TextView
                    android:id="@+id/tvLearnTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/f700"
                    android:text="@string/learn_to_sketch"
                    android:textColor="@color/n1"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLearnContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/f500"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:text="@string/learn_content"
                    android:textColor="@color/n1"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toStartOf="@id/imvLearn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLearnTitle" />

                <ImageView
                    android:id="@+id/imvLearn"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/ic_learn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/container_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.dream.libads.admob.NativeCollapseAdmob
            android:id="@+id/nativeAdmob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_primary_stroke_12"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>